# sidekick

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cert.pem  data_size_vs_time_total.sh  nginx.conf  quack_sender.sh  r1.sh  rawsock.c  run_client.sh  server.py  trigger_hang.sh
figures/: README.md  ack_frequency.py  baseline_bar.py  bit_widths.py  common.py  cpu.py  data_size_vs_tput.py  fig2_microbenchmarks.py  fig4a_low_latency_media.py  fig4a_pep_emulation.py  fig4b_low_latency_media.py  fig4b_pep_emulation.py  fig4c_ack_reduction.py  fig5_baseline_bar.py  fig6_fairness.py  fig8_real_world.py  fig9_cwnd.py  graph.sh  loss_vs_tput.py  multiflow.py  quack_microbenchmarks.py  raw_id_analysis.py  real_world.py
http3_integration/: README.md
http3_integration/real_world/: raw_data_client  run_client.sh  run_quic.sh  start_nginx.sh  start_proxy.sh  start_sender.sh
http3_integration/webserver/: key.pem  nginx.conf  server.py
media_integration/: README.md
media_integration/media/: Cargo.toml
media_integration/real_world/: run_base.sh  run_client.sh  run_quack.sh  start_proxy.sh  start_server.sh
mininet/: README.md  benchmark.py  benchmark_encode.py  client.py  common.py  main.py  net.py  network.py  webrtc.py
montgomery-multiplication-demo/: .gitignore  Makefile  README  preprocess.py  timerstuff.h
plot/: ack_frequency.py  baseline_bar.py  common.py  cpu.py  data_size_vs_total_time.py  data_size_vs_tput.py  graph.sh  latencies.py  loss_vs_tput.py  min_ack_delay.py  multiflow.py  quack_microbenchmarks.py  raw_id_analysis.py  real_world.py  requirements.txt  time_vs_cwnd.py
quack/: Cargo.toml  Makefile  README.md  build.rs
quack-bm/: Cargo.toml  Makefile
quack-bm/src/: common.rs  construct.rs  construct_multi.rs  decode.rs  main.rs
quack/examples/: benchmark_construct.rs  benchmark_construct_multi.rs  benchmark_decode.rs  printer.rs
quack/src/: accumulator.rs  decoded_quack.rs  evaluator.rs  factor.c  lib.rs  macros.rs  modint.rs  montgomery.rs  power_sum.rs  power_table.rs  precompute.rs  psum.rs  ptable.rs  quack.rs  strawman_a.rs  strawman_b.rs  strawmen.rs
quack/src/arithmetic/: evaluator.rs  factor.c  modint.rs  montgomery.rs
quack/src/quack_internal/: mod.rs  montgomery.rs  psum.rs  ptable.rs  strawman_a.rs  strawman_b.rs
results/cwnd/: cwnd_quack_20M_loss0.25p.out  cwnd_quack_20M_loss0p.out  cwnd_quack_20M_loss1p.out  cwnd_quack_20M_loss2p.out  cwnd_quack_20M_loss5p.out  cwnd_quic_1M_loss0p.out  cwnd_quic_20M_loss0.25p.out  cwnd_quic_20M_loss0p.out  cwnd_quic_20M_loss1p.out  cwnd_quic_20M_loss2p.out  cwnd_quic_20M_loss5p.out  cwnd_tcp_150s_loss5p.out  cwnd_tcp_25s_loss0p.out  cwnd_tcp_31s_loss0.25p.out  cwnd_tcp_40s_loss0p.out  cwnd_tcp_40s_loss5p.out  cwnd_tcp_50s_loss1p.out  cwnd_tcp_70s_loss0p.out  cwnd_tcp_70s_loss5p.out  cwnd_tcp_75s_loss2p.out
results/cwnd/020623/: cwnd_quic_20M_loss2p.out  cwnd_tcp_150s_loss5p.out  cwnd_tcp_25s_loss0p.out  cwnd_tcp_35s_loss0p.out  cwnd_tcp_50s_loss1p.out  cwnd_tcp_75s_loss2p.out
results/cwnd/bw10/: cwnd_tcp_25s_loss0p.out  cwnd_tcp_50s_loss1p.out  cwnd_tcp_75s_loss2p.out
results/cwnd/bw20/: cwnd_tcp_150s_loss5p.out  cwnd_tcp_20M_loss0p.out  cwnd_tcp_20M_loss1p.out  cwnd_tcp_25s_loss0p.out  cwnd_tcp_50s_loss1p.out  cwnd_tcp_75s_loss2p.out
results/loss0p/cubic/: pep.txt  quack-2ms-r.txt  quic.txt  tcp.txt
results/loss10p/cubic/: pep.txt  (+1 more)
rs-montgomery-multiplication-demo/: Cargo.toml
rs-montgomery-multiplication-demo/src/: crt.py  main.c  main.rs  preprocess.py
scripts/: gen_data.sh  run_quic.sh  start_nginx.sh  start_sender.sh
scripts/retx/: run_quack.sh
scripts/webrtc/: run_base.sh  run_quack.sh  start_sender.sh  start_server.sh
sidecar/: Cargo.toml  README.md
sidecar/examples/: benchmark_encode.rs  benchmark_encode_multi.rs  cc_proxy.rs
sidecar/src/: buffer.rs  lib.rs  sidecar.rs  sidecar_multi.rs  socket.rs
sidekick/: Cargo.toml  README.md
sidekick/examples/: benchmark_encode.rs  benchmark_encode_multi.rs
sidekick/src/: buffer.rs  lib.rs  sidekick.rs  sidekick_multi.rs  socket.rs
visualizer/: README.md  index.html
visualizer/javascript/: index.js
visualizer/styles/: styles.css
webrtc/: Cargo.toml
webserver/: nginx.conf  run_client.sh  run_server.sh  server.fixed.py
(+253 files in other folders)
