[package]
name = "quack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"

[build-dependencies]
cc = "1.0.33"

[features]
default = []
libpari = []
power_table = []
