[package]
name = "quack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
rand = "0.8.5"
env_logger = "0.9.3"
multiset = "0.0.5"
sha2 = "0.10.6"
bincode = "1.3.3"

[build-dependencies]
cc = { version = "1.0.33", optional = true }

[features]
default = []
libpari = ["dep:cc"]
power_table = []
montgomery = []

[[example]]
name = "benchmark_decode"
required-features = ["libpari", "power_table", "montgomery"]

[[example]]
name = "benchmark_construct"
required-features = ["power_table", "montgomery"]

[[example]]
name = "benchmark_construct_multi"
