[package]
name = "quack"
version = "0.1.0"
edition = "2021"
description = "A data structure for being able to refer to and efficiently acknowledge a set of opaque packets seen by a network intermediary."
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
rand = "0.8.5"
env_logger = "0.9.3"
multiset = "0.0.5"
sha2 = "0.10.6"
bincode = "1.3.3"

[build-dependencies]
cc = { version = "1.0.33", optional = true }

[features]
default = []
libpari = ["dep:cc"]
power_table = []
montgomery = []
strawmen = []

[[example]]
name = "benchmark_decode"
required-features = ["libpari", "power_table", "montgomery", "strawmen"]

[[example]]
name = "benchmark_construct"
required-features = ["power_table", "montgomery", "strawmen"]

[[example]]
name = "benchmark_construct_multi"
required-features = ["strawmen"]