[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
quack = { path = "../quack" }
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1", features = ["net", "sync", "rt", "time", "macros"] }
log = "0.4.17"
env_logger = "0.9.3"
libc = "0.2.137"

[[example]]
name = "cc_proxy"
