[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
quack = { path = "../quack" }
clap = { version = "4.0.26", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1", features = ["net", "sync", "rt", "time", "macros", "io-util"] }
log = "0.4.17"
env_logger = "0.9.3"
libc = "0.2.137"
signal-hook = "0.3.15"
pcap = "1.1.0"

[features]
default = []

# Log the sidecar identifier when it is inserted in a quACK.
quack_log = []

# Benchmark performance.
benchmark = []

[[bin]]
name = "benchmark_encode"
required-features = ["benchmark"]

[[bin]]
name = "benchmark_encode_multi"
required-features = ["benchmark"]

[[bin]]
name = "sender"

[[bin]]
name = "sender_strawman_a"

[[bin]]
name = "sender_strawman_b"

[[bin]]
name = "sender_strawman_tcp"
