[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1", features = ["net", "sync", "rt", "time", "macros", "io-util"] }
log = "0.4.17"
rand = "0.8.5"
quack = { path = "../../quack", features = ["strawmen"] }
env_logger = "0.9.3"
bincode = "1.3.3"

[[bin]]
name = "media_server"

[[bin]]
name = "media_client"

